# zed-verilog-extension

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  extension.toml
.github/workflows/: build-slang.yaml  build-veridian.yaml  pre-commit.yaml  rust-tests.yaml
languages/systemverilog/: config.toml  highlights.scm  indents.scm  injections.scm
languages/verilog/: brackets.scm  config.toml  highlights.scm  outline.scm
src/: lib.rs  platform.rs
src/language_server/: mod.rs  slang.rs  svls.rs  verible.rs  veridian.rs
tests/: release_assets.rs
