[package]
name = "zed-verilog-extension"
version = "0.0.19"
authors = ["Owen Law <owenlaw222@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zed_extension_api = "0.7.0"

[dev-dependencies]
flate2 = "1.1.9"
tar = "0.4.46"
tempfile = "3.27.0"
ureq = "2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
